Hair particles does not appear when rendering #61362

Closed
opened 2019-02-09 19:55:23 +01:00 by Wassim · 7 comments

System Information
Operating system: Windows
Graphics card: GTX 1080 TI

Blender Version
Broken: 2.80 (sub 44), branch: blender2.7, commit date: 2019-02-08 22:09, hash: 191b8951f7, type: Release

Short description of error
There is no error message, the problem is when i add particles to a plane for example, they are visible in the viewport, but not when rendering image.

Exact steps for others to reproduce the error
I attached a blende file that reproduce the problem. You just need to press F12.
The prolem is present with Cycles and Eevee.

pb.blend

**System Information** Operating system: Windows Graphics card: GTX 1080 TI **Blender Version** Broken: 2.80 (sub 44), branch: blender2.7, commit date: 2019-02-08 22:09, hash: 191b8951f7af, type: Release **Short description of error** There is no error message, the problem is when i add particles to a plane for example, they are visible in the viewport, but not when rendering image. **Exact steps for others to reproduce the error** I attached a blende file that reproduce the problem. You just need to press F12. The prolem is present with Cycles and Eevee. [pb.blend](https://archive.blender.org/developer/F6561756/pb.blend)
Author

Added subscriber: @WassimOUARTSI

Added subscriber: @WassimOUARTSI

studio/blender-studio#61419 was marked as duplicate of this issue

studio/blender-studio#61419 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-02-11 15:02:46 +01:00

I can confirm that they do not show up in the F12 render (cycles/eevee) but they do show up in the rendered viewport.

I can confirm that they do not show up in the F12 render (cycles/eevee) but they do show up in the rendered viewport.

This issue was referenced by 3117446967

This issue was referenced by 311744696727915b34ef8dca4d8f40d71c4d469d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @frameshift

Added subscriber: @frameshift
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61362
No description provided.